<resources>
    <string name="app_name">challenge4</string>
    <string name="note_app">Note App</string>
    <string name="description">Jot Down anything you want to achieve, today or in the future</string>
    <string name="login_text">Login</string>
    <string name="email">Email</string>
    <string name="password_hint">Password</string>
    <string name="havent_account">Didn\'t have account?</string>
    <string name="register">Register</string>
    <string name="name_full">Full Name</string>
    <string name="have_account">Already have account?</string>
    <string name="title">Title</string>
    <string name="date">24 Okt 2023</string>
    <string name="description_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.\n</string>
    <string name="create_note">Create your first note !</string>
    <string name="vector_image">Vector Image</string>
    <string name="search">Search</string>
    <string name="enter_note">Enter Note Here</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>

</resources>