<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="adapter"
            type="com.example.challenge4.view.adapter.NoteAdapter" />
        <variable
            name="viewModel"
            type="com.example.challenge4.viewmodel.MainViewModel" />
        <variable
            name="layoutManager"
            type="androidx.recyclerview.widget.RecyclerView.LayoutManager" />
        <variable
            name="view"
            type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.MainActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/note_app"
                />
        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.search.SearchBar
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search"
            app:layout_constraintTop_toBottomOf="@id/app_bar"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:visibility="@{viewModel.loading ? view.GONE : view.VISIBLE}"
            app:layout_constraintTop_toBottomOf="@id/search_bar"
            app:setAdapter="@{adapter}"
            app:setLayoutManager="@{layoutManager}"
            tools:listitem="@layout/note_item"/>

        <LinearLayout
            android:id="@+id/no_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical"
            android:visibility="@{viewModel.loading || adapter.itemCount > 0 ? view.GONE : view.VISIBLE}"
            android:gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/vector"
                android:contentDescription="@string/vector_image" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_note"
                android:textSize="16sp"
                android:fontFamily="@font/urbanist_medium"
                />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>