<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.auth.RegisterActivity">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_back"
        android:backgroundTint="@color/white"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_back"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="32dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/register"
            android:textSize="24sp"
            android:fontFamily="@font/urbanist_bold"
            android:textColor="@color/black"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxStrokeColor="@color/light_gray"
            app:startIconDrawable="@drawable/ic_person">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/name_full"
                android:textSize="16sp"
                android:fontFamily="@font/urbanist_medium"
                android:textColorHint="@color/light_gray"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxStrokeColor="@color/light_gray"
            app:startIconDrawable="@drawable/ic_email">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:fontFamily="@font/urbanist_medium"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:textColorHint="@color/light_gray"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxStrokeColor="@color/light_gray"
            app:startIconDrawable="@drawable/ic_password">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:fontFamily="@font/urbanist_medium"
                android:inputType="textPassword"
                android:hint="@string/password_hint"
                android:textColorHint="@color/light_gray"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="32dp"
            android:text="@string/register"
            android:textSize="16sp"
            android:backgroundTint="@color/black"
            app:cornerRadius="12dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/have_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/go_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/have_account"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/urbanist_medium"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintHorizontal_chainStyle="packed"/>

    <TextView
        android:id="@+id/go_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/have_acc"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/urbanist_medium"
        android:textSize="16sp"
        android:textColor="@color/red"
        android:text="@string/login_text"/>

</androidx.constraintlayout.widget.ConstraintLayout>